Layout problem fixed

--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -33,7 +33,11 @@
   h4{
     @apply text-lg sm:text-xl font-semibold
   }
-
+  
+  
+  html {
+    overflow-y: scroll;
+  }
 
 }
 
